[gd_scene load_steps=2 format=3 uid="uid://3peme6phmins"]

[ext_resource type="Script" uid="uid://bjbfrnvfg4rcn" path="res://scripts/evolution_vault.gd" id="1_vault"]

[node name="EvolutionVault" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vault")

[node name="Background" type="Node2D" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = 100.0
grow_horizontal = 2
alignment = 1

[node name="ShardLabel" type="Label" parent="UI/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0.4, 1, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 32
text = "QUANTUM SHARDS: 0"

[node name="BackButton" type="Button" parent="UI/TopBar"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "RETURN"

[node name="ScrollContainer" type="ScrollContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -392.0
offset_top = -290.0
offset_right = 510.0
offset_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="UpgradeGrid" type="GridContainer" parent="UI/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 3

[node name="TitleLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 110.0
offset_right = 200.0
offset_bottom = 160.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "EVOLUTION VAULT"
horizontal_alignment = 1

[connection signal="pressed" from="UI/TopBar/BackButton" to="." method="_on_back_pressed"]
